# JOPAI-Sereno

./: .gitignore  CAHIER_DES_CHARGES.md  Home.py  boutons urgence.docx  certifications et MAIF.docx  identité visuellle.docx  pyproject.toml  requirements-gemini.txt  requirements.txt  setup.py  transcript interview initiale.docx  v0 cahier des charges.docx
.streamlit/: config.toml
config/: secrets.example.toml  streamlit-secrets.EXAMPLE.toml
docs/: CAHIER_ECHANGES.md
jopai_sereno.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pages/: 0_Accueil.py  10_Proto_Client_satisfaction.py  11_Proto_Artisan_dashboard.py  12_Proto_Proprietaire_activity.py  13_Proto_Guide_parcours.py  14_Projet_stats.py  15_Disponibilite_artisans.py  16_Admin_artisan_disponibilites.py  17_Admin_proprietaire_disponibilites.py  18_Proto_Proprietaire_conformite.py  19_Projet_reporting_indicateurs.py  1_Tests_connexions.py  20_Projet_parametrage_parcours_client.py  21_Admin_artisans.py  22_Admin_artisans_consultation.py  2_Cahier_des_charges.py  3_Carnet_echange.py  4_Proto_Client_accueil.py  5_Proto_Client_informations.py  6_Proto_Client_SST.py  7_Proto_Client_file_visio.py  8_Proto_Client_visio.py  9_Proto_Client_paiement.py
scripts/: init_google_sheet.py  migrate_google_sheet_schema.py
sereno_core/: __init__.py  app_urls.py  artisan_notify.py  cdc_pdf_export.py  config_kv.py  design_tokens.py  disponibilite_calendar_ui.py  experience_settings.py  gcp_credentials.py  gcs_artisan_photo.py  gspread_helpers.py  jopai_brand_html.py  md_chapters.py  pilot_auth.py  project_line_counts.py  (+23 more)
(+5 files in other folders)
