[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jopai-sereno"
version = "0.1.0"
description = "SÉRÉNO — pilote Streamlit (JOPAI BTP)"
requires-python = ">=3.10"
# Les dépendances runtime restent listées dans requirements.txt (Streamlit Cloud).

[tool.setuptools.packages.find]
where = ["."]
