[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jopai-sereno"
version = "0.1.0"
description = "SÉRÉNO — pilote Streamlit (JOPAI BTP)"
requires-python = ">=3.10"
# Dépendances runtime : requirements.txt (+ requirements-gemini.txt optionnel pour l’API Gemini).

[tool.setuptools.packages.find]
where = ["."]
